# Paint

./: .gitignore  CMakeLists.txt  Paint.cpp  Paint.sln  Paint.vcxproj  nomake.bat
src/: Artist.h  BezierRectangleFillArtist.cpp  BezierRectangleFillArtist.h  BresenhamsEllipseDrawingArtist.cpp  CardinalSplineArtist.cpp  CardinalSplineArtist.h  ColorPicker.cpp  ColorPicker.h  Core.h  CursorMenu.cpp  DirectEllipseDrawingArtist.cpp  DirectEllipseDrawingArtist.h  EllipseArtist.cpp  EllipseArtist.h  EllipseDrawingArtist.cpp  EllipseDrawingArtist.h  HermiteSquareFillArtist.cpp  HermiteSquareFillArtist.h  MenuManager.h  NullArtist.cpp  NullArtist.h  Paint.cpp  Palette.h  Point.h  Utils.h
src/artist/: Artist.h  BezierRectangleFillArtist.cpp  CardinalSplineArtist.cpp  CardinalSplineArtist.h  ConvexFillArtist.h  HermiteSquareFillArtist.cpp  HermiteSquareFillArtist.h  LineCircleWindowClippingArtist.cpp  LineCircleWindowClippingArtist.h  Matrix.h  NullArtist.h  PointCircleWindowClippingArtist.cpp  PointCircleWindowClippingArtist.h  RecursiveFloodFillArtist.cpp  RecursiveFloodFillArtist.h
src/artist/circle_artist/: CircleArtist.cpp  CircleArtist.h
src/artist/circle_filling_artist/: CircleFillingArtist.cpp  CircleFillingArtist.h  CircleLineFillingArtist.cpp  CircleLineFillingArtist.h  CirclesFillingArtist.cpp  CirclesFillingArtist.h
src/artist/ellipse_artist/: BresenhamsEllipseDrawingArtist.cpp  BresenhamsEllipseDrawingArtist.h  DirectEllipseDrawingArtist.cpp  DirectEllipseDrawingArtist.h  DirectPolarEllipseDrawingArtist.cpp  DirectPolarEllipseDrawingArtist.h  EllipseArtist.cpp  EllipseArtist.h  NewEllipseArtist.cpp  NewEllipseArtist.h  OptimizedPolarEllipseDrawingArtist.cpp  OptimizedPolarEllipseDrawingArtist.h
src/artist/flood_fill_artist/: FloodFillArtist.cpp  FloodFillArtist.h
src/artist/line_artist/: LineArtist.cpp  LineArtist.h  LineArtistDDA.cpp  LineArtistDDA.h  LineArtistMidpoint.cpp  LineArtistMidpoint.h  LineArtistParametric.cpp  LineArtistParametric.h  LineDDAArtist.cpp  (+5 more)
src/menu/: ColorMenu.cpp  ColorPicker.cpp  ColorPicker.h  FileMenu.cpp  Menu.h  MenuEntry.cpp  MenuEntry.h  MenuEntryManager.cpp  MenuEntryManager.h  MenuManager.cpp  MenuManager.h  ShapesMenu.cpp
src/utilities/: FileManager.cpp  FileManager.h  LineDDAStrategy.cpp  LineDDAStrategy.h  LineMidpointStrategy.cpp  LineParametricStrategy.cpp  LineStrategy.h
(+59 files in other folders)
